--- a/index.html
+++ b/index.html
@@ -4,37 +4,55 @@
             <title>zuzubalândia</title><!--Titulo da página-->
 
                 <link href="estilos.css" rel="stylesshet">
+                <style>
+                    h1{
+                        color:midnightblue;
+                    }
+                    h3{
+                        color:green;
+                    }
+                    p{
+                        color:black;
+                        margin-left: 5px;
+                    }
+                    img{
+                        border: 3px solid red;
+                    }
+                    button{
+                        color:navy;
+                        background-color:paleturquoise;
+                        font-size: 15pt;
+                        border: 2px solid navy;
+                    }
+                </style>
     </head>
     
     <body>
-    <h1>testezinho :3</h1> <!--Título principal-->
-    <p>listinhas owo</p> <!--Parágrafo-->
-        <ol> <!--Lista Ordenada-->
-            <li>listinha das minhas sofrências de CORNO</li> <!--Lista N°1 será um tópico-->
-            <ul> <!--Lista Não Ordenada-->
-                <li>mumu chifrinho batendo no teto ♉♉♉♉</li> <!--Tópico, neste caso, será um SubTópico-->
-                <li>lembrar dos chifres batendo ♉♉♉♉♉♉♉♉♉♉♉♉♉♉</li>
-
-            </ul>
-
-            <li>top 5 melhores memes braboooorrr 👌😂👌😂👌😂👌😂👌😂</li> <!--Lista N°2 será um tópico-->
-            <ol>
-                <li>vin diesel kkk</li>
-                <li>eis que a 10/10</li>
-                <li>galo cego</li>
-                <li>irineu</li>
-                <li>cê vai sentar na cabeçsss</li>
-            </ul>
-        </ol>
+    <dl style="text-align:center">
+    <h1>Welcome, Dovahkiin</h1> <!--Título principal-->
+    <img src = "img/dovahkiin.jpg" width="550" heigth="375" alt="Dovahkiin">
+    <p>Poeminha pra enfeitar</p>
+    <p>Adolescente</p>
+    <p>Adoles cente</p>
+    <p>A dor ele sente</p>
+    <p>Sem receio</p>
+    <p>Teu cu na reta</p>
+    <p>Meu pau sem freio</p>
         <p>----------------------------------------------</p>
-        <p>Listinha aleatória de SCP</p>
+        <h3>Listinha aleatória de SCP</h3>
         <dl> <!--Lista de definição-->
-                <p><strong><b>A Tragédia do Rei Enforcado</b></strong></p> <!--Nome-->
-                <dt> SCP 701</dt> <!--Cargo-->
-                <dd> Classificação - Euclid</dd> <!--Função no cargo-->
+            <img src = "img/scp 701.jpg" width="250" heigth="375" alt="SCP 701">
+                <a href= "http://scp-pt-br.wikidot.com/scp-701" target=”_blank style = color:slategray><strong><b>A Tragédia do Rei Enforcado</b></strong></p> <!--Nome-->
+                <dt>SCP 701</dt> <!--Cargo-->
+                <dd style = color:orangered>Classificação - Euclid</dd> <!--Função no cargo-->
         </dl>
         <p>----------------------------------------------</p>
-        <a href=" https://www.fiemg.com.br/" target=”_blank> Site da Fiemg</a><p></p>
-        <a href=" https://github.com/KhavVicttor" target=”_blank> Meu GitHub, entra aí</a>
+        <button><a href="https://www.fiemg.com.br/" target=”_blank> Site da Fiemg</a></button><p></p>
+        <button><a href="https://github.com/KhavVicttor" target="_blank"> Meu GitHub, entra aí</a></button> <p><img src = "img/GitHub.png" width="100" heigth="100" alt="GitHub"></p>
+        <p>----------------------------------------------</p>
+        <dl style="text-align:center">
+        <img src = "img/oi.jpg" width="318" heigth="384" alt="Tooru Yukimura">
+        <p>Khav © 2019</p>
+        </dl>
     </body>
 </html>
