adicionei mais algumas atualizações do HTML, como a adição de botões

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                         border: 3px solid red;
                     }
                     button{
-                        color:navy;
-                        background-color:paleturquoise;
+                        color:lightskyblue;
                         font-size: 15pt;
                         border: 2px solid navy;
                     }
@@ -40,12 +39,14 @@
     <p>Meu pau sem freio</p>
         <p>----------------------------------------------</p>
         <h3>Listinha aleatória de SCP</h3>
+        </dl>
         <dl> <!--Lista de definição-->
+            <dl style="text-align:center">
             <img src = "img/scp 701.jpg" width="250" heigth="375" alt="SCP 701">
-                <a href= "http://scp-pt-br.wikidot.com/scp-701" target=”_blank style = color:slategray><strong><b>A Tragédia do Rei Enforcado</b></strong></p> <!--Nome-->
+                <a href= "http://scp-pt-br.wikidot.com/scp-701" target=”_blank style = color:slategray></a><p></p>
+                    <p><strong><b>A Tragédia do Rei Enforcado</b></strong></p> <!--Nome-->
                 <dt>SCP 701</dt> <!--Cargo-->
                 <dd style = color:orangered>Classificação - Euclid</dd> <!--Função no cargo-->
-        </dl>
         <p>----------------------------------------------</p>
         <button><a href="https://www.fiemg.com.br/" target=”_blank> Site da Fiemg</a></button><p></p>
         <button><a href="https://github.com/KhavVicttor" target="_blank"> Meu GitHub, entra aí</a></button> <p><img src = "img/GitHub.png" width="100" heigth="100" alt="GitHub"></p>
