--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
                         margin-left: 5px;
                     }
                     img{
-                        border: 3px solid red;
+                        border: 3px solid slateblue;
                     }
                     button{
-                        color:lightskyblue;
+                        color:mediumorchid;
                         font-size: 15pt;
                         border: 2px solid navy;
                     }
+                    
                 </style>
     </head>
     
@@ -48,6 +49,15 @@
                 <dt>SCP 701</dt> <!--Cargo-->
                 <dd style = color:orangered>Classificação - Euclid</dd> <!--Função no cargo-->
         <p>----------------------------------------------</p>
+        <h3> Relatóriozinho para teste</h3>
+        <input type="date"> <!--Data-->
+        <input type="time"> <!--Horário-->
+        <input type="color"> <!--Cor-->
+        <input type="month"> <!--Mês-->
+        <input type="email"> <!--Email-->
+        <input type="tel"> <!--Telefone-->
+        <input type="url"> <!--Url-->
+        <p>----------------------------------------------</p>
         <button><a href="https://www.fiemg.com.br/" target=”_blank> Site da Fiemg</a></button><p></p>
         <button><a href="https://github.com/KhavVicttor" target="_blank"> Meu GitHub, entra aí</a></button> <p><img src = "img/GitHub.png" width="100" heigth="100" alt="GitHub"></p>
         <p>----------------------------------------------</p>
@@ -55,5 +65,9 @@
         <img src = "img/oi.jpg" width="318" heigth="384" alt="Tooru Yukimura">
         <p>Khav © 2019</p>
         </dl>
+        <!--Teste para botão-->
+        <!--Autofocus dá um foco ao botão-->
+        <!--type = submit envia os dados do formulário para o servidor-->
+        <dl style="text-align:right"><button type="submit">Click Aqui, seu verme Aldmer</button></dl>
     </body>
 </html>
