--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     
     <body>
     <dl style="text-align:center">
+        <audio></audio>
     <h1>Welcome, Dovahkiin</h1> <!--Título principal-->
     <img src = "img/dovahkiin.jpg" width="550" heigth="375" alt="Dovahkiin">
     <p>Poeminha pra enfeitar</p>
