adicionar - comandos de console

--- a/index.html
+++ b/index.html
@@ -6,33 +6,46 @@
                 <link href="estilos.css" rel="stylesshet">
                 <style>
                     h1{
-                        color:midnightblue;
+                        color:mediumvioletred;
+                    }
+                    h2{
+                        color:white;
                     }
                     h3{
                         color:green;
                     }
                     p{
-                        color:black;
+                        color:white;
                         margin-left: 5px;
                     }
                     img{
-                        border: 3px solid slateblue;
+                        border: 3px solid cornflowerblue;
                     }
                     button{
                         color:mediumorchid;
                         font-size: 15pt;
                         border: 2px solid navy;
                     }
+                    body{
+                        background-image: url(https://i.pinimg.com/564x/c8/82/04/c88204ab3db0882f154847a6a6fa0f36.jpg)
+                    }
                     
                 </style>
     </head>
     
     <body>
+            <p>
+            <script>
+            var data5 = new Date(2014,11,8,13,10,30,0);
+            document.write(data5 + "<br/>");
+            document.write(data5.toUTCString()+ "<br/>");
+            document.write(data5.toDateString());
+            </script>
+            </p>
     <dl style="text-align:center">
-        <audio></audio>
     <h1>Welcome, Dovahkiin</h1> <!--Título principal-->
     <img src = "img/dovahkiin.jpg" width="550" heigth="375" alt="Dovahkiin">
-    <p>Poeminha pra enfeitar</p>
+    <h2>Poeminha pra enfeitar</h2>
     <p>Adolescente</p>
     <p>Adoles cente</p>
     <p>A dor ele sente</p>
@@ -47,7 +60,7 @@
             <img src = "img/scp 701.jpg" width="250" heigth="375" alt="SCP 701">
                 <a href= "http://scp-pt-br.wikidot.com/scp-701" target=”_blank style = color:slategray></a><p></p>
                     <p><strong><b>A Tragédia do Rei Enforcado</b></strong></p> <!--Nome-->
-                <dt>SCP 701</dt> <!--Cargo-->
+                <dt style = color:white> SCP 701</dt> <!--Cargo-->
                 <dd style = color:orangered>Classificação - Euclid</dd> <!--Função no cargo-->
         <p>----------------------------------------------</p>
         <h3> Relatóriozinho para teste</h3>
